# start

./: .gitignore  README.md  pyproject.toml
src/start/: auth.py  cli.py  ticktick.py  tui.css  tui.py
