[project]
name = "start"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "abap34", email = "abap0002@gmail.com" }
]
dependencies = [
    "python-dotenv>=1.1.0",
    "ticktick-py>=2.0.3",
    "textual>=2.1.2",
    "pydantic>=2.10.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
start = "start.cli:main"
start-dash = "start.tui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/start"]
